서비스소개 완료

--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -665,6 +665,8 @@ a.ui-acco-btn:after {content:""; width:30px; height:30px; background:url(../imag
 .service-info-b {background-color:#f4f4f4;padding-top:40px;margin-top:70px}
 .txt-service-a {text-align:center;font-size:36px;font-weight:600;color:#292a2e;font-family:SCD, 'sans-serif';letter-spacing:-1px;word-break:keep-all}
 .txt-service-a.v2 {margin-top:52px}
+.txt-service-a.v2 + .txt-service-b {margin-top:30px}
+.txt-service-c {margin-top:30px;font-size:20px;line-height:30px;color:#565656;word-break:keep-all}
 .txt-service-b {font-size:27px;word-break:keep-all;color:#494032;text-decoration:underline;text-align:center}
 .service-list-a {display:flex;margin:36px auto 0;max-width:900px}
 .service-list-a .list-item {width:20%;padding:0 15px;text-align:center}
@@ -705,3 +707,29 @@ a.ui-acco-btn:after {content:""; width:30px; height:30px; background:url(../imag
 .triangle-area .triangle-item .triangle-list .list-item:before {content:'';display:block;position:absolute;left:0;top:10px;width:3px;height:3px;background-color:#fff;border-radius:50%}
 .triangle-item-group {display:flex;justify-content:space-between;margin-top:24px}
 .indent-a {padding-left:6px;text-indent:-6px}
+
+.service-info-b .img-box-a,
+.service-info-area .img-box-a {text-align:center;margin-top:40px}
+.service-info-b .img-box-a img,
+.service-info-area .img-box-a img {max-width:100%;vertical-align:top}
+.service-step {max-width:820px;margin:32px auto 0;padding-bottom:40px;display:flex;justify-content:space-between}
+.service-step .list-item {position:relative;width:calc((100% - 180px) / 4);border-radius:50%;background:linear-gradient(-69deg,#e2a936, #a27623,#ae7f2d ,  #f5c75f 70%, #e6b352)}
+.service-step .list-item:last-child {background:linear-gradient(-44deg, #633f00,#674100 40%, #a46d00, #925f00)}
+.service-step .list-item ~ .list-item:before {content:'';position:absolute;left:-54px;top:50%;display:inline-block;width:16px;height:16px;border:solid #383a41;border-width:6px 6px 0 0;-webkit-transform:rotate(45deg) translateY(-50%);transform:rotate(45deg) translateY(-50%);}
+.service-step .list-item .txt-box {padding-top:100%;position:relative}
+.service-step .list-item .txt {position:absolute;top:50%;left:0;width:100%;transform:translateY(-50%);-webkit-transform:translateY(-50%);font-size:24px;font-weight:600;color:#fff;text-align:center;line-height:28px}
+.service-step .list-item .step-type {display:block;text-align:center;font-size:20px;color:rgba(255,255,255,.5);font-weight:300}
+.img-group {margin:24px auto 0;display:flex;justify-content:space-between;max-width:1200px;padding-bottom:60px}
+.img-group .img-item {width:calc((100% - 36px) / 4)}
+.img-group .img-item img {width:100%;vertical-align:top}
+.leader-member {margin:60px auto 0;max-width:900px;display:flex;justify-content:space-between}
+.leader-member .leader-item {width:calc(50% - 15px);text-align:center}
+.leader-member .leader-item img {max-width:100%;vertical-align:top}
+.leader-member .leader-item .leader-date {margin-top:28px;word-break:keep-all}
+.leader-member .leader-item .txt-leader-a {font-size:20px;font-weight:500;color:#494032}
+.leader-member .leader-item .txt-leader-b {color:#292a2e;font-size:24px;font-family:SCD, 'sans-serif';font-weight:600;margin-top:12px}
+.leader-member .leader-item .txt-leader-c {margin-top:8px;font-size:16px;color:#494032}
+.service-banner {max-width:1400px;height:160px;position:relative;overflow:hidden;border-radius:20px;margin:40px auto 0}
+.service-banner .link-service-bn {display:block}
+.service-banner img {position:absolute;height:100%;top:0;left:50%;transform:translateX(-50%);-webkit-transform:translateX(-50%)}
+.txt-service-a .point {color:#d09429}
