--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -244,9 +244,9 @@
 .section-b .review-area.active .review-detail {height:auto;margin-top:30px;padding:36px 80px 36px 40px}
 .section-b .more-area {position:relative;height:48px;max-width:1567px;background:url("../../resources/images/main/more_line.png") no-repeat 50% 0;margin:90px auto 0;background-size:100%}
 .section-b .more-area .btn-more {position:absolute;left:50%;top:-33px;width:66px;margin-left:-33px;height:66px;background:url("../../resources/images/main/btn-more.png") no-repeat 0 0}
-
+.courses-item.banner-item{padding-bottom:0}
 .section-c {max-width:1500px;margin:80px auto 0;display:flex}
-.section-c .banner-item {flex:1}
+.section-c .banner-item {flex:1; }
 .section-c .banner-item ~ .banner-item {margin-left:40px}
 .section-c .banner-item .link-banner {display:block}
 .section-c .banner-item img {width:100%;vertical-align:top}
