--- a/resources/css/ui.responsive.css
+++ b/resources/css/ui.responsive.css
@@ -142,8 +142,9 @@
     .leader-info .chara-item .ico-img{display:inline-block;width:75px;height:75px;margin-bottom:0}
     .leader-info .chara-item .ico-img img{width:100%}
     .leader-info .chara-item .txt{font-size:14px}
-    .leader-info .btn-gold{position:relative;height:50px;border-radius:25px;padding:10px 40px;font-size:16px;margin:0;font-weight:500;font-family:'Noto Sans KR';background: linear-gradient(-69deg,#e2a936, #a27623, #dda93e 70%, #ebbc4c 80%, #fdeaa6)}
+    .leader-info .btn-gold {position:relative;height:50px;border-radius:25px;padding:10px 40px;font-size:16px;margin:0;font-weight:500;font-family:'Noto Sans KR';background: linear-gradient(-69deg,#e2a936, #a27623, #dda93e 70%, #ebbc4c 80%, #fdeaa6)}
     .leader-info .btn-gold::before{background-size:cover;width:100px;height:100px;top:-30px;left:-42px}
+    .leader-info .btn-area .btn-gold + .btn-gold {margin-left:20px}
 }
 @media (max-width:1340px) {
     /* 메인 */
@@ -944,6 +945,9 @@
     .service-banner {height:80px;border-radius:8px;margin-top:28px}
     .leader-member .leader-item .txt-leader-a {font-size:14px}
     .leader-member .leader-item .txt-leader-b {font-size:16px;margin-top:4px}
+
+    .leader-info .btn-area .btn-gold + .btn-gold {margin:12px 0 0}
+    .leader-info .btn-area .btn-gold {min-width:80%}
 }
 @media (max-width:510px) {
     .ui-modal-cont .leader-list {padding:0 10px}
