--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -743,3 +743,17 @@ a.ui-acco-btn:after {content:""; width:30px; height:30px; background:url(../imag
 .no-data {background-color:#fff;border-radius:20px;box-shadow: 5px 0 18px rgba(0,0,0,.15);padding:100px 20px;margin-bottom:20px;text-align:center;font-size:24px;font-weight:500;color:#222}
 .agree-top-group {display:flex;justify-content:space-between}
 .big-txt {font-size:24px;color:#222;font-weight:600}
+
+.courses-wrap.type-b{display: block; width:100%;;}
+.courses-wrap.type-b .courses-item{padding:0; flex:none; width:730px; float: left; margin: 10px;}
+
+.courses-wrap.type-b .courses-item-b{padding-top:60px}
+.courses-wrap.type-b .courses-item-b dd p{font-size:22px; margin-top:20px}
+.courses-wrap.type-b .courses-item-c .btn-gold.big{position:static; margin:0; transform: translate(0, 0);}
+.courses-wrap.type-b .btn-area{padding:20px; float: left;}
+.courses-wrap.type-b .courses-item-c ul > li + li{margin-top:10px; border-top: 1px solid #ccc; }
+.courses-wrap.type-b .courses-item-c ul > li {overflow: hidden; padding:0 0 5px}
+.courses-wrap.type-b .courses-item-c b{display:block; float:left; width:80px; padding-left:30px; font-size: 20px; font-weight: 600; padding:6px 0 0; text-align: left; margin-left:20px}
+.courses-wrap.type-b .courses-item-c ol{float:left; width:calc(100% - 100px)}
+.courses-wrap.type-b .courses-item-c ol li:nth-child(10){clear: both;}
+.courses-wrap.type-b .courses-item-c ol li{margin:0 8px 8px; float: left;}
